# raid-autoupgrade

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: read-constitution.md  speckit.checklist.md  speckit.implement.md  speckit.specify.md
.constitution/: testing.md
.specify/memory/: constitution.md
docs/: airplane-mode-trick.md
plans/: appdata-integration-plan.md  appdata-integration-tasklist.md  di-holistic-evaluation.md  di-service-evaluation.md  gui-simple-functional.md  gui-simple-technical.md  gui-simple.md  monitor-orchestrator-injection-analysis.md  protocols-di-plan.md  protocols-di-tasklist.md  refactor-services-plan.md  refactor-services-tasklist.md  service-refactor-1.md  service-refactor-functional.md  service-refactor-phases.md  service-refactor-technical.md  service-refactor.md  test-cleanup-plan.md  test-cleanup-tasklist.md
scripts/: champion_links_by_page.json  get_artifact_icons.py  get_champion_links.py
specs/002-service-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-gui-desktop-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-network-manager-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
test/: integration_baseline_spend_help.txt  test_cli_integration.py  test_locate.py  test_locate_region_service.py  test_progressbar_state.py  test_screenshot_service.py  test_state_machine.py  test_upgrade_orchestrator.py
(+133 files in other folders)
