[project]
name = "raid-autoupgrade"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Raijin", email = "dummy@email.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyautogui>=0.9.54",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pygetwindow>=0.0.9",
    "pillow>=10.0.0",
    "mss>=10.0.0",
    "loguru>=0.7.3",
    "pytesseract>=0.3.13",
    "pywinauto>=0.6.9",
    "click>=8.1.8",
    "diskcache>=5.6.3",
    "rich>=14.0.0",
    "wmi>=1.5.1",
]

[project.scripts]
raid-autoupgrade = "raid_autoupgrade.cli:raid_autoupgrade"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]
